# Games101

./: README.md
homework/0/code/: CMakeLists.txt  main.cpp
homework/1/code/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
homework/1/code/eigen/eigen-doc/: AVX512_2PacketMath_8h_source.html  AVX_2Complex_8h_source.html  AVX_2PacketMath_8h_source.html  AVX_2TypeCasting_8h_source.html  AlignedBox_8h_source.html  AltiVec_2Complex_8h_source.html  AltiVec_2PacketMath_8h_source.html  AmbiVector_8h_source.html  Amd_8h_source.html  AngleAxis_8h_source.html  ArrayBase_8h_source.html  ArrayCwiseBinaryOps_8h_source.html  ArrayCwiseUnaryOps_8h_source.html  ArrayWrapper_8h_source.html  Array_8h_source.html  AssignEvaluator_8h_source.html  Assign_8h_source.html  Assign__MKL_8h_source.html  AssignmentFunctors_8h_source.html  BDCSVD_8h_source.html  BandMatrix_8h_source.html  BasicPreconditioners_8h_source.html  BiCGSTAB_8h_source.html  BinaryFunctors_8h_source.html  BlasUtil_8h_source.html  BlockHouseholder_8h_source.html  BlockMethods_8h_source.html  Block_8h_source.html  BooleanRedux_8h_source.html  CUDA_2Complex_8h_source.html  CUDA_2PacketMath_8h_source.html  CUDA_2TypeCasting_8h_source.html  CholmodSupport_8h_source.html  ColPivHouseholderQR_8h_source.html  ColPivHouseholderQR__LAPACKE_8h_source.html  CommaInitializer_8h_source.html  CommonCwiseBinaryOps_8h_source.html  CommonCwiseUnaryOps_8h_source.html  CompleteOrthogonalDecomposition_8h_source.html  ComplexEigenSolver_8h_source.html  (+826 more)
homework/1/opencvTest/: CMakeLists.txt  main.cpp
(+736 files in other folders)
